--- a/index.html
+++ b/index.html
@@ -39,6 +39,17 @@
             <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
           </ul>
         </address>
+        <button
+          class="menu-toggle js-open-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
+          <div class="hamburger-icon">
+            <svg width="32px" height="22px">
+              <use href="./images/icons.svg#icon-hamburger"></use>
+            </svg>
+          </div>
+        </button>
       </div>
     </header>
     <main>
@@ -56,8 +67,8 @@
       </section>
       <section class="section">
         <div class="container">
-          <ul class="list">
-            <li>
+          <ul class="section-list">
+            <li class="first-section-li">
               <div class="icon-rectangle">
                 <svg width="64" height="64" class="first-section-icon">
                   <use href="images/icons.svg#icon-antenna-1"></use>
@@ -69,7 +80,7 @@
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="first-section-li">
               <div class="icon-rectangle">
                 <svg width="64" height="64" class="first-section-icon">
                   <use href="images/icons.svg#icon-clock-1"></use>
@@ -81,7 +92,7 @@
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="first-section-li">
               <div class="icon-rectangle">
                 <svg width="64" height="64" class="first-section-icon">
                   <use href="images/icons.svg#icon-diagram-1"></use>
@@ -93,7 +104,7 @@
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="first-section-li">
               <div class="icon-rectangle">
                 <svg width="64" height="64" class="first-section-icon">
                   <use href="images/icons.svg#icon-astronaut-1"></use>
@@ -108,10 +119,10 @@
           </ul>
         </div>
       </section>
-      <section class="section">
+      <section class="section wawd-section">
         <div class="container">
           <h2 class="section-header">What Are We Doing</h2>
-          <ul class="list">
+          <ul class="section-list">
             <li>
               <img
                 src="images/img-1.jpg"
@@ -142,7 +153,7 @@
       <section class="section team-section">
         <div class="container">
           <h2 class="section-header">Our Team</h2>
-          <ul class="list">
+          <ul class="section-list">
             <li class="team-card">
               <img
                 src="images/mark-guerrero.jpg"
@@ -317,7 +328,7 @@
       <section class="section">
         <div class="container">
           <h2 class="section-header">Customers</h2>
-          <ul class="list">
+          <ul class="customers-list">
             <li>
               <a href="#" class="client-link">
                 <svg class="client-icon">
@@ -432,6 +443,78 @@
         </ul>
       </div>
     </footer>
+    <div class="js-menu-container mobile-menu-container">
+      <button type="button" class="js-close-menu button-close">
+        <svg class="icon-close" width="8" height="8">
+          <use href="images/icons.svg#icon-close"></use>
+        </svg>
+      </button>
+      <div class="mobile-menu-wrapper">
+        <nav>
+          <ul class="mobile-menu">
+            <li>
+              <a href="index.html" class="mobile-menu-link mobile-link-active"
+                >Studio</a
+              >
+            </li>
+            <li>
+              <a href="portfolio.html" class="mobile-menu-link">Portfolio</a>
+            </li>
+            <li>
+              <a href="#" class="mobile-menu-link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <div>
+          <address>
+            <ul class="mobile-contact-menu">
+              <li>
+                <a href="tel:+110001111111" class="mobile-phone"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+              <li>
+                <a href="mailto:info@devstudio.com" class="mobile-email"
+                  >info@devstudio.com</a
+                >
+              </li>
+            </ul>
+          </address>
+          <div>
+            <ul class="mobile-socialmedia-list">
+              <li>
+                <a href="#" class="mobile-social-link">
+                  <svg width="24" height="24">
+                    <use href="images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#" class="mobile-social-link">
+                  <svg width="24" height="24">
+                    <use href="images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#" class="mobile-social-link">
+                  <svg width="24" height="24">
+                    <use href="images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#" class="mobile-social-link">
+                  <svg width="24" height="24">
+                    <use href="images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="button-close" data-modal-close>
@@ -529,5 +612,12 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="js/mobile-menu.js"></script>
   </body>
 </html>
